styles.css
/* @import url('https://fonts.googleapis.com/css2?family=Expletus+Sans&family=Frank+Ruhl+Libre&display=swap'); */
@import url('https://fonts.googleapis.com/css2?family=Expletus+Sans&family=Frank+Ruhl+Libre:wght@500&display=swap');

*,
*::before,
*::after {
    box-sizing: border-box;
}

:root {
    --side-margin: 40px;
    --header-size: 65px;
    --background: #F0F0F0;
    --secondary: #dedede;
    --header: rgba(222, 222, 222, 1);
    --logo-red: #b41c1b;
    --red-hover: #c31d1d;
    --button-text: #F4F4F4;
    --header-spacing: max(1rem, 1.5vw);
    --show-dropdown: hidden;
}

html {
    scroll-padding-top: var(--header-size);
}

body {
    padding: 0;
    margin: 0;
    background-color: var(--background);
    font-family: 'Expletus Sans', cursive;
    font-size: 1.2rem;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.container {
    margin-top: var(--header-size);
    padding-left: var(--side-margin);
    padding-right: var(--side-margin);
}

.home {
    margin-top: 0 !important;
}

.center {
    text-align: center;
}

h1 {
    font-size: max(3rem, 2vw);
    margin: 1rem;
    margin-bottom: .25rem;
}

h2 {
    font-size: max(1.75rem, 1.25vw);
    margin-left: 1rem;
    margin-right: 1rem;
    margin-top: .5rem;
    margin-bottom: .5rem;
}

a {
    text-decoration: none;
    color: var(--logo-red)
}

a:hover {
    text-decoration: none;
    color: var(--red-hover)
}

p {
    font-family: 'Frank Ruhl Libre', serif;
    margin-left: 1rem;
    margin-right: 1rem;
    margin-top: .5rem;
    margin-bottom: .5rem;
}


/* Header */

.main-header {
    position: fixed;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: var(--header-size);
    background: var(--header);
    font-size: max(1.2rem, 1vw);
    z-index: 1;
    width: 100%;
}

.header-logo {
    display: flex;
    align-items: center;
    padding-left: var(--side-margin);
}

.header-logo img {
    height: calc(var(--header-size) - 2px);
    padding-top: 2px;
    padding-left: 10px;
}

.main-nav {
    float: right;
}

.main-nav ul {
    display: flex;
    margin: 0;
    padding: 0;
    list-style-type: none;
    padding-right: var(--side-margin);
    vertical-align: middle;
}

.hamburger {
    visibility: hidden;
    width: 0;
    height: 0;
}

.main-nav a {
    text-align: center;
    color: #000000;
    text-decoration: none;
    padding-right: var(--header-spacing);
    vertical-align: middle;
}

.main-nav a:hover {
    color: #4b4b4b;
    text-decoration: none;
}

button {
    background-color: var(--logo-red);
    color: var(--button-text);
    font-family: 'Expletus Sans', cursive;
    border-width: 0;
}

.apply-button {
    border-radius: 13px;
    font-size: max(1.2rem, 1vw);
    height: max(2rem, 1.5vw);
    width: max(90px, 4.5vw);
}

button:hover {
    background-color: var(--red-hover);
    color: #ffffff;
    cursor: pointer;
}





/* Footer */

.main-footer {
    margin: auto;
    margin-bottom: 0;
    width: 100%;
    text-align: center;
    background-color: var(--secondary);
}

.footer-name {
    font-size: x-large;
    padding-top: 10px;
    font-family: 'Expletus Sans', cursive;
}

.main-footer ul {
    display: inline-flex;
    list-style-type: none;
    vertical-align: middle;
    margin: 10px
}

.main-footer ul>li {
    padding-left: 20px;
    padding-right: 20px;
}

.fa {
    font-size: 30px !important;
    color: #000000 !important;
}

.fa:hover {
    font-size: 30px !important;
    color: #717171 !important;
}

.footer-contact {
    font-size: medium;
    font-family: 'Frank Ruhl Libre', serif;
    margin-bottom: 10px;
    line-height: 22px;
}

.footer-email {
    color: #000000;
    text-decoration: none;
}

.footer-email:hover {
    color: #b41c1b;
}


.footer-copyright {
    background-color: #313131;
    padding: 5px;
    font-size: small;
    color: #656565;
}

@media (max-width: 900px),
(orientation: portrait) {
    :root {
        --side-margin: 25px;
    }

    .hamburger {
        visibility: visible;
        height: auto;
        width: auto;
        right: var(--side-margin);
        background-color: rgba(255, 255, 255, 0.0);
        border-radius: 5px;
        margin-right: var(--side-margin);
        padding: .5rem;
        display: flex;
    }

    .hamburger:hover {
        background-color: rgba(255, 255, 255, 0.4);
    }

    .main-header div {
        display: flex;
        flex-direction: row-reverse;
    }

    .main-nav ul {
        visibility: var(--show-dropdown);
        position: absolute;
        flex-direction: column;
        background-color: var(--background);
        right: var(--side-margin);
        top: var(--header-size);
        border-radius: 10px;
        padding-top: 0;
        margin-top: 1rem;
        padding: .5rem;
        filter: drop-shadow(3px 2px 4px #3b3b3b);
    }

    .main-nav ul li {
        margin: 1rem;
        text-align: center;
    }

    .main-nav ul li a {
        padding: 0;
    }


}

